headless ecommerce v2 installed!

--- a/.env.example
+++ b/.env.example
@@ -78,3 +78,6 @@ LINKEDIN_CALLBACK_URL=https://yourhost.com/customer/social-login/linkedin-openid
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_CALLBACK_URL=https://yourhost.com/customer/social-login/github/callback
+
+JWT_TTL=525600
+JWT_SHOW_BLACKLIST_EXCEPTION=true
